sandc/test/fixtures/astRegression/shouldFail/productions/switchExpression/MissingElse.sand
pub class MissingElse {
    foo() {
        (
            switch val {
                case a {
                    b()
                }
            }
        )
    }
}